# mod_jar_inspector

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
src/: main.rs
